--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal portfolio website for [Your Name]">
-    <title>[Your Name] - Portfolio</title>
+    <title> - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -81,7 +81,7 @@
 
 <section id="about">
     <h2>About Me</h2>
-    <p>Hi, I'm [Your Name], a bioinformatician with a background in applied chemistry and proficiency in machine learning and deep learning for analyzing biological and clinical data. I have a passion for developing computational methods to solve scientific problems.</p>
+    <p> a bioinformatician with a background in   and proficiency in machine learning and deep learning for analyzing biological and clinical data. I have a passion for developing computational methods to solve scientific problems.</p>
 </section>
 
 <section id="projects">
@@ -89,7 +89,7 @@
     <div class="projects-grid">
         <div class="project-card">
             <h3>Project 1: Peptide Analysis Tool</h3>
-            <p>A machine learning-based tool to classify and analyze peptides in Streptomyces.</p>
+            <p>A machine learning-based tool to classify and analyze peptides</p>
             <a href="https://github.com/yourusername/peptide-analysis">View on GitHub</a>
         </div>
         <div class="project-card">
