--- a/index.html
+++ b/index.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal portfolio website for [Your Name]">
-    <title> - Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>[Your Name] - Portfolio</title>
+    
+    <!-- Link to Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Courier+New:wght@400;700&display=swap" rel="stylesheet">
+    
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            background-color: #e1f1fd;
+            font-family: 'Courier New', monospace;
+            color: #090808;
+            font-size: 20px;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
         }
         header {
-            background-color: #0044cc;
+            background-color: #3284e3;
             color: white;
+            padding: 2rem 0;
             text-align: center;
-            padding: 1rem 0;
         }
-        nav {
-            margin-top: 10px;
+        h1 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: #3284e3;
+            margin-top: 30px;
+        }
+        h2, h3 {
+            color: #3284e3;
+            font-weight: bold;
         }
         nav ul {
             list-style: none;
@@ -35,9 +47,7 @@
         nav ul li a {
             color: white;
             text-decoration: none;
-        }
-        section {
-            padding: 2rem;
+            font-size: 1.2rem;
         }
         .projects-grid {
             display: grid;
@@ -60,8 +70,15 @@
             margin-top: 20px;
         }
         a {
-            color: #0044cc;
+            color: #3284e3;
             text-decoration: none;
+        }
+        .about-container, .contact-container {
+            background-color: #ffffff;
+            padding: 30px;
+            margin-top: 40px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
@@ -79,36 +96,43 @@
     </nav>
 </header>
 
-<section id="about">
-    <h2>About Me</h2>
-    <p> a bioinformatician with a background in   and proficiency in machine learning and deep learning for analyzing biological and clinical data. I have a passion for developing computational methods to solve scientific problems.</p>
-</section>
+<div class="container">
+    <section id="about" class="about-container">
+        <h2>About Me</h2>
+        <p>I am a bioinformatician with a background in applied chemistry and proficiency in machine learning and deep learning for analyzing biological and clinical data. I have a passion for developing computational methods to solve scientific problems.</p>
+    </section>
 
-<section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-grid">
-        <div class="project-card">
-            <h3>Project 1: Peptide Analysis Tool</h3>
-            <p>A machine learning-based tool to classify and analyze peptides</p>
-            <a href="https://github.com/yourusername/peptide-analysis">View on GitHub</a>
+    <section id="projects" class="about-container">
+        <h2>Projects</h2>
+        <div class="projects-grid">
+            <div class="project-card">
+                <h3>Project 1: Peptide Analysis Tool</h3>
+                <p>A machine learning-based tool to classify and analyze peptides</p>
+                <a href="https://github.com/yourusername/peptide-analysis">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Project 2: Clinical Image Processing</h3>
+                <p>Image processing algorithms applied to clinical datasets for diagnosis and research purposes.</p>
+                <a href="https://github.com/yourusername/clinical-image-processing">View on GitHub</a>
+            </div>
         </div>
-        <div class="project-card">
-            <h3>Project 2: Clinical Image Processing</h3>
-            <p>Image processing algorithms applied to clinical datasets for diagnosis and research purposes.</p>
-            <a href="https://github.com/yourusername/clinical-image-processing">View on GitHub</a>
-        </div>
-        <!-- Add more projects as needed -->
-    </div>
-</section>
+    </section>
 
-<section id="contact">
-    <h2>Contact</h2>
-    <p>Feel free to reach out to me via email at <a href="mailto:yourname@email.com">yourname@email.com</a> or connect with me on <a href="https://www.linkedin.com/in/yourname">LinkedIn</a>.</p>
-</section>
+    <section id="contact" class="contact-container">
+        <h2>Contact</h2>
+        <p>Feel free to reach out to me via email at <a href="mailto:yourname@email.com">yourname@email.com</a> or connect with me on <a href="https://www.linkedin.com/in/yourname">LinkedIn</a>.</p>
+    </section>
+</div>
 
 <footer>
     <p>&copy; 2024 [Your Name]. All Rights Reserved.</p>
 </footer>
 
+<!-- Bootstrap JavaScript dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
+
